# kGymSuite

./: .dockerignore  .gitignore  DEPLOY.md  LICENSE  README.md  kgym.py
deployment/: deploy-new.sh
deployment/gcp/: compose.yml  config.json
deployment/local/: .gitignore  compose.yml  config.json  kgym-runner.env
docker/: kgym-builder.Dockerfile  kgym-dashboard.Dockerfile  kgym-mq.Dockerfile  kgym-prebuilder.Dockerfile  kgym-scheduler.Dockerfile  kgym-swe.Dockerfile  kgym-vmmanager.Dockerfile
kbuilder/: linux-backport-commits.json  pyproject.toml
kbuilder/KBDr/kbuilder/: __main__.py  build_task.py  checkout_manager.py  linux_builder.py  repository_manager.py  utils.py
kclient/: pyproject.toml
kclient/KBDr/kclient/: __init__.py  __main__.py  kgym_client.py  kgym_dataset.py  models.py
kclient/KBDr/kclient_models/: kbuilder.py  kprebuilder.py  kvmmanager.py
kclient/repositories/: populate.py
kcore/: pyproject.toml
kcore/KBDr/kcore/: __init__.py  models.py  rpc.py  scheduler.py  utils.py  worker.py
kcore/KBDr/kcore/storage_backends/: __init__.py  storage_abc.py  storage_gcs.py  storage_local.py
kdashboard/: README.md  package-lock.json  package.json  tailwind.config.ts
kdashboard/src/: types.tsx
kdashboard/src/app/: layout.tsx  page.tsx
kdashboard/src/app/jobs/[jobId]/: page.tsx
kdashboard/src/app/system/displays/jobLog/: page.tsx
kdashboard/src/app/system/displays/systemLog/: page.tsx
kdashboard/src/components/: error-display.tsx  job-card.tsx  job-details-table.tsx  job-tags.tsx  json-viewer.tsx  loading-spinner.tsx  log-entry.tsx  navigation.tsx  pagination.tsx  providers.tsx  sort-controls.tsx  worker-tabs.tsx
kdashboard/src/hooks/: useConfig.ts
kdashboard/src/lib/: api.ts
kmq/: definitions.json
kprebuilder/: pyproject.toml
kprebuilder/KBDr/kprebuilder/: __main__.py  analyze_binary.py  checkout_manager.py  prebuilder_task.py
kscheduler/: pyproject.toml
kscheduler/KBDr/kscheduler/: __init__.py  __main__.py  backend.py  config.py  main.py  scheduler_server.py  utils.py
kvmmanager/: pyproject.toml
kvmmanager/KBDr/kvmmanager/: __main__.py  gcp.py  syzkaller.py  utils.py  vm_task.py
misc/: reproducible-bugs-on-qemu.json
notebooks/: Eval.ipynb  kBench.ipynb  start-server.sh
