[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kgym-client"
description = "kGym Client"
readme = "README.md"
requires-python = ">=3.11"
version = "v1.0.0"
dependencies = [
    "kgym-core",
    "httpx",
    "tqdm",
    "litellm",
    "pydriller",
    "lxml",
    "aiolimiter",
    "ipython",
    "jupyter"
]

[project.scripts]
kclient = "KBDr.kclient.__main__:main_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["KBDr.*"]  # ["*"] by default
