[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kgym-prebuilder"
description = "kGym Prebuilder"
readme = "README.md"
requires-python = ">=3.11"
version = "v1.0.0"
dependencies = [
    "kgym-core",
    "kgym-client",
    "aiofiles",
    "unidiff"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["KBDr.*"]  # ["*"] by default
